[package]
name = "tdfirehose"
version = "0.1.0"
edition = "2021"
authors = ["dcrash9 <https://github.com/dcrash9>"]
description = "A cross platform options data client."
readme = "README.md"
repository = "https://github.com/dcrash9/tdfirehose"
license-file = "LICENSE"
keywords = ["thetadata", "options", "marketdata", "trading", "websockets"]
categories = ["command-line-utilities"]


[profile.release]
opt-level = 3  # Level of optimizations, can be 0-3 or 's'/'z'
debug = false  # Include debug information, true or false
lto = true     # Enables Link Time Optimization for further optimizations
#strip = 'symbols'  # Strip symbols from the binary, can be 'all' or 'debuginfo'


[dependencies]
chrono = "*"
clap = "*"
config = "*"
csv = "*"
futures-util = "*"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
time = { version = "*", features = ["serde"] } # Ensure to enable features you need, like serde for serialization.
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "*"
toml = "*"
url = "*"